fix(mentor): harden discovery visibility and search rules